--- a/clone.html
+++ b/clone.html
@@ -11,13 +11,13 @@
 		var keyData = {
 			q: {
 				sound: new Howl({
-		  		urls: ['sounds/bubbles.mp3']
+		  		urls: ['bubbles.mp3']
 				}),
 				color: '#1abc9c'
 			},
 			w: {
 				sound: new Howl({
-		  		urls: ['sounds/clay.mp3']
+		  		urls: ['clay.mp3']
 				}),
 				color: '#2ecc71'
 			},
